[BAKCPORT-V0]Update go releasers
Summary:
```
 ⨯ release failed after 0s
    error=
    │ yaml: unmarshal errors:
    │   line 69: field skip not found in type config.Changelog
Error: The process '/opt/hostedtoolcache/goreleaser-action/2.8.1/x64/goreleaser' failed with exit code 1
```

Test Plan: Test after landing

Reviewers: skurapati

Reviewed By: skurapati

Subscribers: yugaware

Differential Revision: https://phorge.dev.yugabyte.com/D42841

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -65,5 +65,4 @@ release:
   # If you want to manually examine the release before it goes live, uncomment the line below:
   # draft: true
 
-changelog:
-  skip: false
+changelog: {}
